# VkFluidSim

./: .gitignore  CMakeLists.txt  README.md
assets/scenes/: dam_break.json  obstacle.json
assets/shaders/: CMakeLists.txt  box.slang  gfx.slang  kernels.slang  particles.comp  particles.comp.spv  particles.slang  particles_3d.slang  simulation.slang  simulation_2d.slang  simulation_3d.slang  sort.slang  spatial_hash.slang  sprite.frag  sprite.vert  sprite.vert.spv
assets/shaders/compiled/: boundaries.comp.spv  box.slang.spv  gfx.slang.spv  lague_model.slang.spv  mesh.slang.spv  offsets_calc.comp.spv  offsets_init.comp.spv  particles.slang.spv  particles_3d.slang.spv  raymarch.slang.spv  reorder.slang.spv  scan.slang.spv  scan_block.comp.spv  scan_combine.comp.spv  simulation.slang.spv  simulation_3d.slang.spv  sort.slang.spv  sort_calc_counts.comp.spv  sort_clear_counts.comp.spv  sort_copy_back.comp.spv  sort_scatter.comp.spv  spatial_hash.slang.spv  spatial_offsets.slang.spv  sprite.vert.spv  update_density.comp.spv  update_external_forces.comp.spv  update_pos.comp.spv  update_pressure_force.comp.spv  update_reorder.comp.spv  update_reorder_copyback.comp.spv  update_spatial_hash.comp.spv  update_spatial_hash.slang.spv  update_viscosity.comp.spv  wcsph_model.slang.spv  wcsph_with_boundary_model.slang.spv
assets/shaders/draw/: box.slang  colormap.slang  mesh.slang  particles_3d.slang  raymarch.slang
assets/shaders/gfx/: sprite.frag  sprite.vert
assets/shaders/offsets/: common.glsl  offsets_init.comp  spatial_offsets.slang
assets/shaders/old/gfx/: particles.slang
assets/shaders/old/offsets/: offsets_calc.comp
assets/shaders/old/scan/: common.glsl  scan_combine.comp
assets/shaders/old/sim/: common.glsl  simulation_2d.slang  spatial_hash_2d.slang  update_pos.comp
assets/shaders/old/sort/: sort_calc_counts.comp  sort_scatter.comp
assets/shaders/scan/: common.glsl  scan.slang  scan_block.comp  scan_combine.comp
assets/shaders/sim/: boundaries.comp  common.glsl  external_forces.comp  kernels_2d.glsl  simulation.slang  spatial_hash.glsl  spatial_hash.slang  update_density.comp  update_external_forces.comp  update_pos.comp  update_pressure_force.comp  update_reorder.comp  update_reorder_copyback.comp  update_spatial_hash.comp  update_viscosity.comp
assets/shaders/simulation/: common.slang  kernels.slang  kernels_2d.slang  kernels_3d.slang  lague_model.slang  spatial_hash.slang  spatial_hash_3d.slang  wcsph_model.slang  wcsph_with_boundary_model.slang
assets/shaders/simulation/kernels/: kernels_3d.slang
assets/shaders/simulation/spatial_hash/: reorder.slang  scan.slang  sort.slang  spatial_hash_3d.slang  spatial_offsets.slang  update_spatial_hash.slang
assets/shaders/sort/: common.glsl  sort_clear_counts.comp  sort_copy_back.comp
cmake/: cpm.cmake
src/: game.cpp  game.h  gfx.cpp  gfx.h  main.cpp  pipeline.cpp  pipeline.h  platform.cpp  platform.h  renderer.cpp  renderer.h  scan.cpp  scan.h  simulation.cpp  simulation.h  sort.cpp  sort.h  ui.cpp  ui.h  world.cpp  world.h  world_3d.cpp  world_3d.h
src/compute/: compute_pipeline.cpp  compute_pipeline.h  sort.cpp  sort.h  spatial_hash.cpp  spatial_hash.h
src/gfx/: camera.cpp  camera.h  common.cpp  common.h  descriptor.cpp  descriptor.h  gfx.cpp  gfx.h  immediate.cpp  immediate.h  mesh.cpp  mesh.h  swapchain.cpp  swapchain.h  transform.cpp  transform.h  vk_util.cpp  vk_util.h
src/gui/: common.cpp  common.h  draw_pipelines.cpp  draw_pipelines.h  gui.cpp  gui.h  imgui_setup.cpp  imgui_setup.h  scene_renderer.cpp  scene_renderer.h  simulation_renderer.cpp
src/gui/2d/: gui_2d.cpp  gui_2d.h  renderer_2d.cpp  renderer_2d.h
src/models/: WCSPH_model.h  lague_model.cpp  lague_model.h  lague_model_2d.cpp  lague_model_2d.h  model.cpp  model.h  wcsph_model.cpp  wcsph_model.h  wcsph_with_boundary_model.cpp  wcsph_with_boundary_model.h
src/models/2d/: lague_model_2d.cpp
src/pipelines/: box_pipeline.cpp  box_pipeline.h  mesh_pipeline.cpp  mesh_pipeline.h  particle_pipeline.cpp  particle_pipeline.h  raymarch_pipeline.cpp  raymarch_pipeline.h
src/renderers/: common.h  draw_pipelines.h  renderer_2d.cpp  renderer_2d.h  renderer_3d.cpp  renderer_3d.h
src/scenes/: dam_break_scene.cpp  dam_break_scene.h  dam_break_wcsph_scene.cpp  dam_break_wcsph_scene.h  dam_break_with_objects_scene.cpp  dam_break_with_objects_scene.h  generic_scene.cpp  generic_scene.h  lague_scene.cpp  lague_scene.h  model_render_scene.cpp  model_render_scene.h  scene.h  scene_2d.cpp  scene_2d.h  scene_3d.cpp  scene_3d.h  simulation_scene.h
src/util/: discretization.cpp  discretization.h  gaussian_quadrature.cpp  gaussian_quadrature.h  geometry.cpp  geometry.h  kernel.cpp  kernel.h  mesh_bvh.cpp  mesh_bvh.h  mesh_loader.cpp  mesh_loader.h  mesh_pseudonormals.cpp  mesh_pseudonormals.h  mesh_sdf.cpp  mesh_sdf.h  scene_loader.cpp  scene_loader.h  volume_map.cpp  volume_map.h
